--- a/Proof-of-Concept-1/docker-compose.yml
+++ b/Proof-of-Concept-1/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: python:3.12-slim
     container_name: bdp-poc
     working_dir: /workspace
-    command: ["python", "-u", "ancp_demo.py"]
+    command: ["python", "-u", "bdp_demo.py"]
     stdin_open: true
     tty: true
     environment:
