--- a/BrainDrive-MVP/.env.example
+++ b/BrainDrive-MVP/.env.example
@@ -13,7 +13,7 @@ HOST_GID=1001
 BRAINDRIVE_DEFAULT_PROVIDER=openrouter
 BRAINDRIVE_OPENROUTER_API_KEY=
 BRAINDRIVE_OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-BRAINDRIVE_OPENROUTER_DEFAULT_MODEL=anthropic/claude-sonnet-4
+BRAINDRIVE_OPENROUTER_DEFAULT_MODEL=minimax/minimax-m2.5
 BRAINDRIVE_OPENROUTER_SITE_URL=
 BRAINDRIVE_OPENROUTER_APP_NAME=BrainDrive-MVP
 BRAINDRIVE_OLLAMA_BASE_URL=http://host.docker.internal:11434/v1
