--- a/BrainDrive-MVP/.env.example
+++ b/BrainDrive-MVP/.env.example
@@ -7,6 +7,8 @@ INTENT_ROUTER_ROUTE_TIMEOUT_SEC=60
 # Shared registration token
 ROUTER_REGISTRATION_TOKEN=braindrive-mvp-dev-token
 ROUTER_NODE_TIMEOUT_SEC=45
+# Defaults for container process user.
+# scripts/bootstrap.sh injects HOST_UID/HOST_GID from your current shell at startup.
 HOST_UID=1001
 HOST_GID=1001
 
